--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.44.3",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "clsx": "^1.1.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@blueprintjs/core": "^3.44.3"
+    "react-split-pane": "^0.1.92"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -23,6 +25,7 @@
     "autoprefixer": "^10.0.4",
     "next-compose-plugins": "^2.2.1",
     "postcss": "^8.1.10",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.2.3"
   }
