--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@blueprintjs/core": "^3.44.3",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/react-splitter-layout": "^3.0.1",
+    "ace-builds": "^1.4.12",
     "clsx": "^1.1.1",
     "github-markdown-css": "^4.0.0",
     "next": "latest",
     "react": "^17.0.1",
+    "react-ace": "^9.4.0",
     "react-dom": "^17.0.1",
-    "react-grid-layout": "^1.2.5"
+    "react-grid-layout": "^1.2.5",
+    "react-iframe": "^1.8.0",
+    "react-use": "^17.2.4"
   },
   "devDependencies": {
     "@types/react-grid-layout": "^1.1.1",
