--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.5",
     "react-iframe": "^1.8.0",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/react-grid-layout": "^1.1.1",
