--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.44.3",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@mapbox/rehype-prism": "^0.6.0",
     "@types/react-splitter-layout": "^3.0.1",
     "ace-builds": "^1.4.12",
     "clsx": "^1.1.1",
