--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "ace-builds": "^1.4.12",
     "clsx": "^1.1.1",
     "github-markdown-css": "^4.0.0",
-    "next": "latest",
-    "react": "^17.0.1",
+    "next": "^11.0.0",
+    "react": "^17.0.2",
     "react-ace": "^9.4.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-use": "^17.2.4",
     "react-utterances": "^0.6.4",
     "swr": "^0.5.6"
